# deep-learning-from-scratch

./: pyproject.toml
ch02/: perceptron.py
ch03/: activation_functions.py  neural_network.py  numeral_recognition.py
