[tool.poetry]
name = "deep-learning-from-scratch1"
version = "0.1.0"
description = ""
authors = ["tanomitsu2002 <tanomitsu2002@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_learning_from_scratch1"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
